# WhiskerScope

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: benchmark.py  export_onnx.py
src/whiskerscope/: composition.py  config.py  logging_setup.py
src/whiskerscope/adapters/: api_models.py  fastapi_app.py  onnx_detector.py  opencv_camera.py  opencv_recorder.py  sqlite_store.py  streamlit_app.py  yolo_detector.py
src/whiskerscope/application/: clip_recorder.py  detection_service.py  event_counter.py
src/whiskerscope/domain/: models.py  ports.py
tests/: conftest.py  test_clip_recorder.py  test_config.py  test_detection_service.py  test_event_counter.py  test_fastapi_app.py  test_models.py  test_sqlite_store.py
