[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whiskerscope"
version = "0.1.0"
description = "Real-time cat detector using webcam with YOLOv8 + OpenCV"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "streamlit>=1.28",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
