[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whiskerscope"
version = "0.1.0"
description = "Real-time cat detector using webcam with YOLOv8 + OpenCV"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.8",
    "streamlit>=1.28",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "httpx>=0.25",
    "anyio[trio]>=4.0",
    "pytest-anyio>=0.0.0",
    "ruff>=0.4",
]
onnx = [
    "onnxruntime>=1.16",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=whiskerscope --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
